<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">MysteryShopTools</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_notes" translatable="false">Mystery Shop Tools</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_category" translatable="false">CategoryActivity</string>
    <string name="dialog_title">Title</string>
    <string name="hint_enter_category">Enter Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="add_category">Add Category</string>
    <string name="name_is_required">Name is Required</string>
    <string name="no_category_found">No Category Found</string>
    <string name="delete_Category">Delete Category</string>
    <string name="action_delete">Delete</string>
    <string name="action_yes">Yes</string>
    <string name="action_cancel">Cancel</string>
    <string name="no_notes_found">No Note found</string>
    <string name="title_activity_add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="date_last_modified">Date Last Modified</string>
    <string name="color">Color</string>
    <string name="sort_by_category" translatable="false">Category</string>
    <string name="sort_title" translatable="false">Sort By</string>
    <string name="title_activity_note_detail" translatable="false">Note Detail</string>
    <string name="category">Category</string>
    <string name="placeholder_note_text">Enter note</string>
    <string name="choose_color">Choose Color</string>


    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="title_activity_search" translatable="false">Search Activity</string>
    <string name="action_sort">Sort</string>
    <string name="no_category">No Category found</string>
    <string name="action_send" translatable="false">Share</string>
    <string name="action_change_color">Choose Color</string>
    <string name="edit_title" translatable="false">Edit Title</string>
    <string name="edit_note" translatable="false">Edit Note</string>
    <string name="share_using">Share Using</string>
    <string name="title_is_required">Title is required</string>
    <string name="note_is_required">Note is required</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_backup">Backups</string>
    <string name="title_item_list" translatable="false">Items</string>
    <string name="title_item_detail" translatable="false">Item Detail</string>
    <string name="backup_options">Backup Options</string>
    <string name="restore">Restore from SD Card</string>
    <string name="backup">Backup to SD Card</string>
    <string name="select_category">Select Category</string>
    <string name="placeholder_note_title">Enter Title</string>
    <string name="image_attachment" translatable="false">Image</string>
    <string name="title_activity_category_list" translatable="false">CategoryListActivity</string>

    <string name="action_play">Play</string>
    <string name="note_detail" translatable="false">Note Detail</string>
    <string name="action_nfc" translatable="false">NFC Beam</string>
    <string name="action_record">Record</string>
    <string name="action_camera">Picture</string>
    <string name="action_sketch">Sketch</string>
    <string name="action_file">Files</string>
    <string name="action_alarm">Reminder</string>
    <string name="error_no_mic">No Microphone found</string>
    <string name="start">Start</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="stop">Stop</string>
    <string name="start_recording">Start Recording</string>
    <string name="error_no_camera">No camera found</string>
    <string name="unable_to_get_image">Unable to capture image</string>
    <string name="save">Save</string>
    <string name="erase">Erase</string>
    <string name="note_editor">Note Editor</string>
    <string name="column_title" translatable="false">title</string>
    <string name="column_date_created" translatable="false">created_time</string>
    <string name="column_date_modified" translatable="false">modified_time</string>
    <string name="sort_order" translatable="false">sort_order</string>
    <string name="sort_order_ascending" translatable="false">ascending</string>
    <string name="sort_order_descending" translatable="false">descending</string>

    <string name="negative_duration" translatable="false">\u2212<xliff:g id="time" example="1:14">%1$s</xliff:g></string>
    <string name="Timer_Fragment" translatable="false">Timer Fragement</string>
    <string name="disclaimer">Mystery Shop Companies to start off. *We are not affiliated, associated, authorized, endorsed by, or in any way officially connected with any of the companies below or any of its subsidiaries or its affiliates.</string>
    <string name="note_list_activity_actionbar_name">Notes</string>
    <string name="SampleCategory1">Personal</string>
    <string name="SampleCategory2">Work Related</string>
    <string name="SampleCategory3">Restaurants</string>
    <string name="SampleCategory4">Hotel</string>
    <string name="SampleCategory5">Productivity</string>
    <string name="SampleCategory6">General</string>
    <string name="SampleCategory7">Social</string>
    <string name="SampleTitle1">Bank Shop</string>
    <string name="SampleContent1">Open a checking account and ask about interest rates</string>
    <string name="SampleTitle2">Gym Work Out</string>
    <string name="SampleContent2">Ask about Gym specials and trainers packages</string>
    <string name="SampleTitle3">Pizza Shop</string>
    <string name="SampleContent3">Order 2 entrees and one drink</string>
    <string name="SampleTitle4">Cupcake Shop</string>
    <string name="SampleContent4">Ask about Vanilla Pumpkin Cupcakes</string>
    <string name="SampleTitle5">Notes from Tavern</string>
    <string name="SampleContent5">Bartender forgot to bring out menu when I was seated</string>
    <string name="styleable_toast_save">Saving your information</string>
    <string name="menu_drawer_notes">Notes</string>
    <string name="menu_drawer_categories">Categories</string>
    <string name="menu_drawer_settings">Settings</string>
    <string name="menu_drawer_companies">Companies</string>
    <string name="menu_drawer_about">About</string>
    <string name="sign_in">sign in</string>
    <string name="unknown_response">unknown response</string>
    <string name="sign_in_cancelled">sign in cancelled</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="unknown_sign_in_response">unknown sign in response</string>
    <string name="sign_out_failed">signed out failed</string>
    <string name="delete_account_failed">account deletion failed</string>
    <string name="signed_in_header">Welcome</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account_label">Delete Account</string>
    <string name="user_profile_header">Profile</string>
    <string name="profile_picture_content_desc">User Description</string>
    <string name="idp_token">idp token</string>
    <string name="idp_secret">idp secret</string>
    <string name="delete_account">Delete Account</string>
    <string name="action_sync">action sync</string>
    <string name="firebase_sync_completed">Firebase Sync Completed</string>
    <string name="log_in_button">Log in</string>
    <string name="skip_log_in">Skip Log in</string>
    <string name="settings_note_editor_summary">Toggle to use Lined Editor or Plain Editor</string>
    <string name="settings_node_editor_title">Note Editor</string>
    <string name="settings_delete_title">Delete</string>
    <string name="settings_delete_summary">Toggle to prompt for Confirm delete</string>
    <string name="settings_sort_options_title">Sort Options</string>
    <string name="settings_sort_options_dialog_title">Select Sort Option</string>
    <string name="settings_sort_order_options_title">Sort Order</string>
    <string name="settings_sort_order_options_dialog_title">Select Sort Order</string>
    <string name="note_detail_date_created">Date Created:</string>
    <string name="note_detail_date_modified">Date Modified:</string>
    <string name="note_list_presenter_save_completed">Saved</string>

    <string-array name="sortOptionsEntries">
        <item>Title</item>
        <item>Date Added</item>
        <item>Date Modified</item>
    </string-array>

    <string-array name="sortOptionsValues">
        <item>@string/column_title</item>
        <item>@string/column_date_created</item>
        <item>@string/column_date_modified</item>
    </string-array>

    <string-array name="sortOrderEntries">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <string-array name="sortOrderValues">
        <item>true</item>
        <item>false</item>
    </string-array>
</resources>
