<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Editor" >
        <SwitchPreference
            android:title="@string/settings_node_editor_title"
            android:key="default_editor"
            android:summary="@string/settings_note_editor_summary"
            android:defaultValue="false"/>
        <SwitchPreference
            android:title="@string/settings_delete_title"
            android:key="prompt_for_delete"
            android:summary="@string/settings_delete_summary"
            android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Default Sort" >
        <ListPreference
            android:key="sort_options"
            android:title="@string/settings_sort_options_title"
            android:dialogTitle="@string/settings_sort_options_dialog_title"
            android:entries="@array/sortOptionsEntries"
            android:entryValues="@array/sortOptionsValues"
            android:defaultValue="@string/column_title" />

        <ListPreference
            android:key="list_sort_order"
            android:title="@string/settings_sort_order_options_title"
            android:dialogTitle="@string/settings_sort_order_options_dialog_title"
            android:entries="@array/sortOrderEntries"
            android:entryValues="@array/sortOrderValues"
            android:defaultValue="true" />

    </PreferenceCategory>
</PreferenceScreen>
