<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/note_detail_fragment_root_view">

    <LinearLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:animateLayoutChanges="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/detail_content_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="2dp">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarSize="4dp"
                android:scrollbarStyle="outsideOverlay"
                android:fillViewport="true">


                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/margin_padding_tiny"
                    android:paddingLeft="@dimen/margin_padding_tiny"
                    android:paddingRight="@dimen/margin_padding_tiny">

                    <RelativeLayout
                        android:id="@+id/toplayout1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:paddingBottom="@dimen/margin_padding_tiny"
                        android:paddingLeft="@dimen/margin_padding_tiny"
                        android:paddingTop="@dimen/margin_padding_tiny">

                        <EditText
                            android:id="@+id/edit_text_category"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/margin_padding_large"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="@dimen/margin_padding_tiny"
                            android:background="@android:color/transparent"
                            android:clickable="true"
                            android:drawableLeft="@drawable/ic_action_folder_open"
                            android:focusable="false"
                            android:hint="@string/select_category"
                            android:textSize="@dimen/text_size_xxnormal" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/primary_text" />


                    <RelativeLayout
                        android:id="@+id/toplayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:paddingBottom="@dimen/margin_padding_tiny"
                        android:paddingLeft="@dimen/margin_padding_tiny"
                        android:paddingTop="@dimen/margin_padding_tiny">

                        <EditText
                            android:id="@+id/edit_text_title"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/margin_padding_xxlarge"
                            android:layout_marginLeft="@dimen/margin_padding_tiny"
                            android:background="@android:color/transparent"
                            android:hint="@string/placeholder_note_title"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords"
                            android:textSize="@dimen/text_size_xxnormal"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/primary_text" />


                    <RelativeLayout
                        android:id="@+id/toplayout_note"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_weight="1"
                        android:paddingBottom="@dimen/margin_padding_tiny"
                        android:paddingLeft="@dimen/margin_padding_tiny"
                        android:paddingTop="@dimen/margin_padding_tiny">


                        <EditText
                            android:id="@+id/edit_text_note"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/margin_padding_tiny"
                            android:background="#00000000"
                            android:gravity="left|top"
                            android:hint="@string/placeholder_note_text"
                            android:inputType="textMultiLine"
                            android:minHeight="100dp"
                            android:scrollbars="none"
                            android:textSize="@dimen/text_size_lined_editor" />

                    </RelativeLayout>

                    <android.support.v4.view.ViewPager
                        android:id="@+id/viewPager"
                        android:layout_width="wrap_content"
                        android:layout_height="400dp"
                        android:layout_marginBottom="30dp">

                    </android.support.v4.view.ViewPager>

                    <ImageView
                        android:id="@+id/sketch_attachment"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:background="@null"
                        android:contentDescription="@string/image_attachment"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/audio_player"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@drawable/gray_border_wo_padding"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingLeft="4dp" >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical" >

                            <FrameLayout
                                android:id="@+id/play_pause_layout"
                                android:layout_width="50dp"
                                android:layout_height="match_parent"
                                android:layout_alignParentLeft="true"
                                android:paddingBottom="5dp"
                                android:paddingRight="5dp"
                                android:paddingTop="5dp" >

                                <ImageView
                                    android:id="@+id/play"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/bg_login"
                                    android:padding="6dp"
                                    android:src="@drawable/ic_action_playback_play" />

                                <ImageView
                                    android:id="@+id/pause"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="6dp"
                                    android:src="@drawable/ic_action_playback_play"
                                    android:visibility="gone" />
                            </FrameLayout>

                            <FrameLayout
                                android:id="@+id/seekbar_layout"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_toRightOf="@id/play_pause_layout"
                                android:paddingBottom="5dp"
                                android:paddingRight="5dp"
                                android:paddingTop="5dp" >

                                <SeekBar
                                    android:id="@+id/media_seekbar"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right|top"
                                    android:orientation="horizontal"
                                    android:paddingBottom="5dp"
                                    android:paddingRight="10dp"
                                    android:paddingTop="5dp" >

                                    <TextView
                                        android:id="@+id/run_time"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:ellipsize="end"
                                        android:inputType="text"
                                        android:text="00:00"
                                        android:textColor="@android:color/darker_gray"
                                        android:textSize="11sp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:ellipsize="end"
                                        android:inputType="text"
                                        android:text=" / "
                                        android:textColor="@android:color/darker_gray"
                                        android:textSize="11sp" />

                                    <TextView
                                        android:id="@+id/total_time"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:ellipsize="end"
                                        android:inputType="text"
                                        android:text="00:00"
                                        android:textColor="@android:color/darker_gray"
                                        android:textSize="11sp" />
                                    <ImageButton
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/audio_delete_button"
                                        android:background="@drawable/delete_button"/>
                                </LinearLayout>
                            </FrameLayout>
                        </RelativeLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/time_stamp"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </ScrollView>
        </android.support.design.widget.CoordinatorLayout>

    </LinearLayout>
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_bottom"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:layout_alignParentBottom="true"
        android:minHeight="?attr/actionBarSize" />

</RelativeLayout>
